2009-01-28  Bastien Nocera  <hadess@hadess.net>

	* gnome-keybinding-properties.c (append_keys_to_tree):
	Print a warning when a key doesn't have a schema, so no
	description, makes debugging things like:
	https://bugzilla.redhat.com/show_bug.cgi?id=482813
	easier

2009-01-25  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keybinding-properties.c: (add_custom_shortcut): fix argument
	type warnings by casting to appropriate type

==================== 2.25.3 ====================
==================== 2.25.2 ====================

2008-11-11  Matthias Clasen  <mclasen@redhat.com>

	* gnome-keybinding-properties.c: Respect the
	/desktop/gnome/keybindings/allowed_keys key.

==================== 2.25.1 ====================

Sun Oct 26 18:06:45 2008  Søren Sandmann  <sandmann@redhat.com>

	* gnome-keybinding-properties.c (cb_dialog_response): Make it
	compile again.

2008-10-26  Matthias Clasen  <mclasen@redhat.com>

	Bug 114796 – binding to arbitrary shell commands

	* gnome-keybinding-properties.c:
	* gnome-keybinding-properties.glade: Add UI for adding and
	removing named custom shortcuts.

==================== 2.24.0.1 ====================

2008-08-23  Jens Granseuer  <jensgr@gmx.net>

	* eggcellrendererkeys.c:
	* gnome-keybinding-properties.glade: don't use the term "accelerator"
	in the UI (bug #547276)

2008-07-26  Jens Granseuer  <jensgr@gmx.net>

	Based on a patch by: Denis Washington <denisw@svn.gnome.org>

	* gnome-keybinding-properties.c: (binding_name), (show_error),
	(accel_edited_callback): when trying to assign a shortcut that is
	already in use, ask the user whether to reassign it instead of
	refusing to do anything (bug #133318)

2008-06-21  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Matthias Clasen <mclasen@redhat.com>

	* gnome-keybinding-properties.c: (setup_dialog):
	* keybinding.desktop.in.in: update icon name to use what
	gnome-icon-theme uses (bug #539338)

2008-06-01  Jens Granseuer  <jensgr@gmx.net>
